--- a/views/index.html
+++ b/views/index.html
@@ -11,58 +11,10 @@
 
     <title>Weather</title>  
 
-    <script>
-      document.getElementById('submit').addEventListener('click', getReport);
-
-
-function getReport() {
-   console.log('submit pressed');
-
-   let city = document.getElementById('city').value;
-   
-   console.log(city);
-
-   const apiURL = 'https://api.openweathermap.org/data/2.5/weather?q=';
-   const apiKey = '&APPID=896a6875185f6799d82c2f0bda98e165';
-   const cityURL = apiURL + city + apiKey;
-
-   console.log(cityURL);
-
-   fetch(cityURL)
-   .then(
-    function (x) {
-       console.log(x);
-       if (x.status === 200) {
-          return x.json();
-       } else {
-
-       }
-    }
- ).then(
-    function (response) {
-
-       let city = response.name;
-       document.getElementById('cityCard').innerHTML = city;
-
-       let tempK = response.main.temp;
-       document.getElementById('kel').innerHTML = Math.round(tempK) + " K";
-
-       let tempC = response.main.temp;
-       document.getElementById('cel').innerHTML = Math.round(Number(tempC - 273.15)) + " C";
-
-       let tempF = response.main.temp;
-       document.getElementById('fahr').innerHTML = Math.round(Number((tempF - 273.15) * (9 / 5) + 32)) + " F";
-
-       console.log(response);
-      
-    })
-    
-}
-    </script>
-
     </head>
   <body class="container">
    <!-- City Submit -->
+   <form action="/" method="POST">
         <div class="mt-5 text-center">
           <div class="row">
             <div class="col"></div>
@@ -72,9 +24,11 @@ function getReport() {
             <div class="col"></div>
           </div>
           <button type="submit" class="btn btn-primary mt-3" id="submit">Submit</button>
-<!-- only visible to logged in users -->
-          <button type="submit" class="btn btn-primary mt-3" id="">Save Location</button>
         </div>
+      </form>
+
+      <!-- only visible to logged in users -->
+      <button type="submit" class="btn btn-primary mt-3" id="">Save Location</button>
 
     <!-- City -->
     <div class="card w-75 text-center mx-auto m-3 mt-5">
@@ -101,7 +55,7 @@ function getReport() {
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="index.js"></script>
 
 
 
