--- a/views/login.html
+++ b/views/login.html
@@ -17,7 +17,7 @@
             <input type="text" name="name" placeholder="Name"/>
             <label for="password">Password</label>
             <input type="text" name="password" placeholder="Password">
-            <button type="button">Login</button>
+            <button type="submit">Login</button>
             <a href="/register" type="button">Register</a>
         </form>
 
