fixes login/dashboard issue)

--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,11 @@
 
     </head>
   <body class="container">
+    <div>
+      <a href="/login" class="btn btn-primary"">Login</a>
+      <a href="/register" class="btn btn-primary"">Register</a>
+
+    </div>
    <!-- City Submit -->
    <form action="/" method="POST">
         <div class="mt-5 text-center">
