--- a/views/login.html
+++ b/views/login.html
@@ -11,16 +11,28 @@
 
     <title>Weather Login</title>  
     </head>
-        <h1>Login Page</h1>
+    <body class="container">
+        <h1 class="mt-5 mb-5">Login</h1>
         <form action="/login" method="POST">
-            <label for="name">Name</label>
-            <input type="text" name="name" placeholder="Name"/>
-            <label for="password">Password</label>
-            <input type="text" name="password" placeholder="Password">
-            <button type="submit">Login</button>
-            <a href="/register" type="button">Register</a>
+          <div class="row mb-3">
+            <div class="col-6">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" id="name" name="name" placeholder="Name" class="form-control"/>
+          </div>
+          </div>
+          <div class="row mb-3">
+            <div class="col-6">
+            <label for="password" class="form-label">Password</label>
+            <input type="text" id="password" name="password" placeholder="Password" class="form-control">
+          </div>
+          </div>
+          <div>
+            <button class="btn btn-success" type="submit">Login</button>
+            <a href="/register" class="btn btn-primary"">Register</a>
+          </div>
         </form>
 
+      </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 
