--- a/views/register.html
+++ b/views/register.html
@@ -9,17 +9,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
 
-    <title>Weather Register</title>  
+    <title>Register</title>  
 
     </head>
   <body class="container">
-    <h1>Register Page</h1>
+    <h1 class="mt-5 mb-5">Register</h1>
     <form action="/register" method="POST">
-        <label for="name">Name</label>
-        <input type="text" name="name" placeholder="Name"/>
-        <label for="password">Password</label>
-        <input type="text" name="password" placeholder="Password">
-        <button type="submit">Register Me</button>
+      <div class="row mb-3">
+        <div class="col-6">
+        <label for="name" class="form-label">Name</label>
+        <input type="text" name="name" placeholder="Name" class="form-control"/>
+      </div>
+      </div>
+      <div class="row mb-3">
+        <div class="col-6">
+        <label for="password" class="form-label">Password</label>
+        <input type="text" name="password" placeholder="Password" class="form-control">
+      </div>
+      </div>
+        <button type="submit" class="btn btn-primary">Register Me</button>
     </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
