--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -23,6 +23,14 @@
             <div class="col">Patchogue, NY</div>
         </div>
 
+        <!-- save a location -->
+        <form action="/dashboard" method="POST">
+          <div class="row mb-3">
+              <div class="col-6">
+                <input class="form-control" type="text" placeholder="Enter City..." name="city">
+            </div>
+          <button type="submit" class="btn btn-primary mt-3" id="">Save Location</button>
+        </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 
